<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.autoopenmoney.MainActivity">

    <TextView
        android:id="@+id/introduce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/introduce"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/content1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/introduce"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:text="@string/introduce_content1"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/content2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/content1"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="@string/introduce_content2"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/content3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/content2"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="@string/introduce_content3"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/content4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/content3"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:text="@string/introduce_content4"
        android:textAppearance="@style/Animation.AppCompat.DropDownUp"
        android:textSize="15sp"/>
</RelativeLayout>
